--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -1,29 +1,34 @@
-name: Stage the app
+name: Deploy to staging
+
 on:
   pull_request:
-    types: [ labeled ]
+    types: [labeled]
 
 env:
   IMAGE_REGISTRY_URL: ghcr.io
+  ###############################################
+  ### Replace <username> with GitHub username ###
+  ###############################################
   DOCKER_IMAGE_NAME: phouthalang-pygnasak-azure-ttt
   AZURE_WEBAPP_NAME: phouthalang-pygnasak-ttt-app
   ###############################################
 
 jobs:
   build:
-    runs-on: ubuntu-latest
     if: contains(github.event.pull_request.labels.*.name, 'stage')
 
+    runs-on: ubuntu-latest
+
     steps:
-      -  uses: action/checkout@v4
-      -  uses: action/setup-node@v4
-         with:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
           node-version: 16
-      -  name: npm install and build webpack
-         run: |
-           npm install
-           npm run build
-      - uses: action/upload-artifact@v4
+      - name: npm install and build webpack
+        run: |
+          npm install
+          npm run build
+      - uses: actions/upload-artifact@v4
         with:
           name: webpack artifacts
           path: public/
@@ -31,21 +36,21 @@ jobs:
   Build-Docker-Image:
     runs-on: ubuntu-latest
     needs: build
-    name: Build image and store in Github Container Registry
+    name: Build image and store in GitHub Container Registry
     steps:
       - name: Checkout
-        uses: action/checkout@v4
+        uses: actions/checkout@v4
 
       - name: Download built artifact
-        uses: action/download-artifact@v4
+        uses: actions/download-artifact@v4
         with:
-          name: webpack-artifacts
+          name: webpack artifacts
           path: public
 
       - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.IMAGE_REPOSITORY_URL }}
+          registry: ${{ env.IMAGE_REGISTRY_URL }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
@@ -63,7 +68,7 @@ jobs:
           context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ stpes.meta.outputs.labels }}
+          labels: ${{ steps.meta.outputs.labels }}
 
   Deploy-to-Azure:
     runs-on: ubuntu-latest
@@ -94,18 +99,3 @@ jobs:
             az logout
             az cache purge
             az account clear
-
-
-
-
-
-
-
-
-
-
-
-
-
-        
-          
