--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -19,10 +19,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 16
       - name: npm install and build webpack
         run: |
-          npm ci
+          npm install --force
           npm run build
       - uses: actions/upload-artifact@v4
         with:
